--- a/boardscore/index.html
+++ b/boardscore/index.html
@@ -15,7 +15,7 @@
                     </div>
                     </div>
                     <div>
-                <h3 class="header">GUEST</h3>
+                <h3 class="header">AWAY</h3>
                 <p id="guest-el">0</p>
                 <div class="adding">
                         <button id="add1-guest" onclick="add1Guest()">+1</button>
